=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2016/09/23 0.20.0
=================

 - Added a new console option to allow users to display the error trace when an error occurs.

 - Added translation for tutorial plugin. This enables support for i18n for any admin ui plugin.

2016/09/23 0.19.1
=================

 - Fix: number of underreplicated shards cannot be negative.

 - Fix: fixed menu order.

2016/08/22 0.19.0
=================

 - Display failing node checks on overview page and allow to dismiss them.

 - Added German translation.
   This change also enables the possibility for further i18n.

2016/06/03 0.18.1
=================

 - Resolve path to ``/_sql`` endpoint correctly when Crate is served at a
   different location than ``/``

2016/05/25 0.18.0
=================

 - Cluster check include now clickable links

 - Load additional links in menu dynamically from news feed

 - Fixed an issue which caused rendering errors in the node list if the cluster
   contains multiple nodes with the same name
   note: changes the url to the detail view of single nodes

 - Added UTM tokens to links that link to the Crate.IO blog

 - Updated news feed URL

 - Label the master node in the cluster node list

2016/02/15 0.17.1
=================

 - Fix: updated BlenderPro webfont
   This fixes CSS glitches in Firefox 44 which misinterpreted height of webfont.

 - Fix: The recent update of the shard calculation for relocating shards caused
   problems with partitioned tables showing incorrect table health.

 - Fix: Reading an undefined property while cluster is offline caused
   Javascript error.

 - Fix: Rename cluster check indicator on statusbar to ``Checks``.

 - Improved display of recovery percentage in table view

 - Fix: relocating shards where previously displayed as "underreplicated" shards
   causing a yellow cluster state while relocating was in progress
